# Procon

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_consensuscore.py  run_procon.py
configs/: btad_default.yaml  mpdd_default.yaml  mvtec_default.yaml  realiad_default.yaml  uni_medical_default.yaml  visa_default.yaml
docs/: METHOD.md
figures/: fig1_overview_spec.txt  fig2_concept_spec.txt
procon/: __init__.py  engine.py
procon/consensus/: __init__.py  banks.py  experts.py  fusion.py  local_covariance.py  oob_pruning.py  prototypes.py  rank_fusion.py  recipes.py  reliability.py  runner.py  soft_projection.py  v9_memory_selection.py
procon/eval/: __init__.py
procon/inference/: __init__.py  faiss_gpu.py  knn_base.py  torch_knn.py
procon/memory/: __init__.py
procon/models/: __init__.py
procon/postprocess/: __init__.py  maps.py  thresholds.py  train_good_thresholds.py
procon/utils/: __init__.py  benchmark.py  dtype.py  io.py  runtime.py
scripts/: realiad_champion.sh  reproduce_champion.sh  run_extra_benchmarks.sh
skipcore/: __init__.py  engine.py
skipcore/consensus/: __init__.py  banks.py  experts.py  oob_pruning.py  recipes.py  reliability.py  runner.py  v9_memory_selection.py
skipcore/eval/: __init__.py  metrics.py
skipcore/inference/: __init__.py  faiss_gpu.py  torch_knn.py
skipcore/memory/: __init__.py  bank.py
skipcore/models/: __init__.py
skipcore/postprocess/: __init__.py
tools/: dump_fig5_maps.py  dump_figure_maps.py  render_fig5.py  render_qualitative_figures.py  verify_bank_vectorized.py  verify_single_forward.py
(+22 files in other folders)
